[APP] Add language route

--- a/mon-pix/translations/en.json
+++ b/mon-pix/translations/en.json
@@ -1048,6 +1048,9 @@
                         "unknown-error": "An error has occured. Please try again or contact the support."
                     }
                 }
+            },
+            "language": {
+              "menu-link-title": "Language"
             }
         },
         "user-tutorials": {
